--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,15 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.15",
+    "axios": "^1.13.1",
+    "lucide-react": "^0.552.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "tailwindcss": "^4.1.15"
+    "react-hot-toast": "^2.6.0",
+    "react-player": "^3.3.3",
+    "react-router-dom": "^7.9.5",
+    "tailwindcss": "^4.1.15",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
